#
# FULLOCK - Fast User Level LOCK library by Yahoo! JAPAN
#
# Copyright 2015 Yahoo! JAPAN corporation.
#
# FULLOCK is fast locking library on user level by Yahoo! JAPAN.
# FULLOCK is following specifications.
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Wed 13 May 2015
# REVISION:
#

SUBDIRS=lib docs tests
EXTRA_DIST=RELEASE_VERSION make_valiables.sh make_release_version_file.sh make_rev.sh

#
# VIM modelines
#
# vim:set ts=4 fenc=utf-8:
#

